# azure-lakehouse-etl-platform

./: .gitignore  README.md  databricks.yml  main.py  pyproject.toml
.github/workflows/: ci-smoke-tests.yml
adf/pipelines/: pl_bronze_ingestion.json  pl_gold_aggregations.json  pl_orchestrate_lakehouse.json  pl_silver_transformations.json
config/: environments.yml  source_catalog.yml
data_samples/seed_files/: customers.json  inventory_snapshots.csv  order_items.json  orders.json  products.json  returns.csv
docs/: architecture.md  business-case.md  career-pack.md  ci-cd.md  data-model.md  evidence-summary.md  execution-model.md  pipeline-design.md  runbook.md
scripts/: run_demo_kpi_exports.py  run_demo_kpis.py  run_full_pipeline.py  run_gold_demo.py
sql/bronze/: 01_returns_raw.sql  02_orders_raw.sql  03_customers_raw.sql  04_products_raw.sql  05_order_items_raw.sql
sql/contracts/: 01_model_contract_v1.sql
sql/dq/: 01_dq_summary_v1.sql  02_v_dq_status.sql
sql/gold/: 01_fact_sales.sql  02_dim_customers.sql  03_dim_products.sql  04_fact_returns_enriched.sql  05_orders_channel_summary.sql  06_returns_reason_summary.sql  07_returns_by_product.sql  08_v_sales_enriched.sql  09_v_returns_enriched.sql
sql/silver/: 01_returns_clean.sql  02_orders_clean.sql  03_customers_clean.sql  04_products_clean.sql  05_order_items_clean.sql
src/azure_lakehouse_etl/: bronze_sources.py  bronze_utils.py  demo_kpi_exports.py  demo_kpi_queries.py  gold_daily_returns.py  gold_daily_sales.py  gold_demo_runner.py  gold_dim_channel.py  gold_dim_customer.py  gold_dim_date.py  (+14 more)
(+41 files in other folders)
