[project]
name = "azure-lakehouse-etl-platform"
version = "0.1.0"
description = "Production-oriented Azure lakehouse ETL platform for retail analytics and decision support."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pyspark>=3.5,<4.0",
  "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/azure_lakehouse_etl"]
